--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -33,7 +33,7 @@
             gap: 20px;
         }
 
-        .predict-button, .recommend-button {
+        .predict-button, .recommend-button, .model-info-button {
             background-color: #4CAF50;
             color: white;
             padding: 15px 30px;
@@ -45,7 +45,7 @@
             display: inline-block;
         }
 
-        .predict-button:hover, .recommend-button:hover {
+        .predict-button:hover, .recommend-button:hover, .model-info-button:hover {
             background-color: #45a049;
         }
 
@@ -53,7 +53,7 @@
 </head>
 <body>
     <h1>Welcome to the Stock Predictor</h1>
-    <p>Click the button below to predict stock prices or get stock recommendations.</p>
+    <p>Click the button below to predict stock prices, get stock recommendations, or view model performance.</p>
 
     <!-- 버튼 컨테이너 -->
     <div class="button-container">
@@ -61,6 +61,8 @@
         <a href="{% url 'predict_stock' %}" class="predict-button">종목 예측</a>
         <!-- 종목 추천 버튼 -->
         <a href="{% url 'recommend_stocks' %}" class="recommend-button">종목 추천</a>
+        <!-- 모델 정보 버튼 -->
+        <a href="{% url 'model_performance' %}" class="model-info-button">모델 정보</a>
     </div>
 </body>
 </html>
