--- a/predictions/templates/predictions/predict.html
+++ b/predictions/templates/predictions/predict.html
@@ -1,4 +1,3 @@
-<!-- stock_predictor/predictions/templates/predictions/predict.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -99,6 +98,15 @@
             margin-bottom: 20px;
         }
 
+        #stock-search {
+            width: 100%;
+            padding: 8px;
+            margin-bottom: 20px;
+            border-radius: 4px;
+            border: 1px solid #ccc;
+            box-sizing: border-box;
+        }
+
         ul.stock-list {
             list-style-type: none;
             padding: 0;
@@ -119,6 +127,23 @@
     <script>
         function fillStockName(stockName) {
             document.getElementById('stock_name').value = stockName;
+        }
+
+        function filterStocks() {
+            var input, filter, ul, li, a, i, txtValue;
+            input = document.getElementById('stock-search');
+            filter = input.value.toUpperCase();
+            ul = document.getElementById("stock-list");
+            li = ul.getElementsByTagName('li');
+
+            for (i = 0; i < li.length; i++) {
+                txtValue = li[i].textContent || li[i].innerText;
+                if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                    li[i].style.display = "";
+                } else {
+                    li[i].style.display = "none";
+                }
+            }
         }
     </script>
 </head>
@@ -145,7 +170,8 @@
 
         <div class="stock-list-container">
             <h2>KOSPI Stock List</h2>
-            <ul class="stock-list">
+            <input type="text" id="stock-search" onkeyup="filterStocks()" placeholder="Search for stocks..">
+            <ul class="stock-list" id="stock-list">
                 {% for name in stock_name_list %}
                     <li onclick="fillStockName('{{ name }}')">{{ name }}</li>
                 {% endfor %}
