로그인 폼에대한 변경과 회원가입 추가

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -20,7 +20,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 My Django Project. All rights reserved.</p>
+        <p>&copy; 2024 iM Digital banker academy. All rights reserved.</p>
     </footer>
 </body>
 </html>
