--- a/recommendation/templates/recommendation/recommendation_list.html
+++ b/recommendation/templates/recommendation/recommendation_list.html
@@ -16,7 +16,7 @@
         {% if recommended_stocks %}
             {% for stock in recommended_stocks %}
                 <div class="col-12 col-md-6 mb-3 d-flex justify-content-center">
-                    <a href="https://finance.naver.com/item/news.naver?code={{ stock.code }}" target="_blank" class="btn btn-success w-100" style="min-width: 200px;">
+                    <a href="https://finance.naver.com/item/news.naver?code={{ stock.code }}" target="_blank" class="btn btn-primary w-100" style="min-width: 200px;">
                         {{ stock.name }}
                     </a>
                 </div>
