--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,10 +3,54 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Login</button>
-</form>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-20 col-lg-20 col-xl-20"> <!-- 컬럼 너비를 조정 -->
+            <div class="card">
+                <div class="card-header text-center">
+                    <h3>로그인</h3>
+                </div>
+                <div class="card-body">
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="form-group mb-3">
+                            {{ form.username.label_tag }}
+                            {{ form.username }}
+                        </div>
+                        <div class="form-group mb-3 position-relative">
+                            {{ form.password.label_tag }}
+                            {{ form.password }}
+                            <span class="position-absolute" style="right: 10px; top: 50%; transform: translateY(-50%);">
+                                <i class="bi bi-eye-slash" id="togglePassword" style="cursor: pointer;"></i>
+                            </span>
+                        </div>
+                        <div class="form-group form-check mb-2">
+                            {{ form.remember_me }}
+                            {{ form.remember_me.label_tag }}
+                            <div class="d-flex justify-content-between">
+                                <a href="{% url 'password_reset' %}">비밀번호 찾기</a>
+                                <a href="{% url 'register' %}">회원가입</a> <!-- 회원가입 링크 추가 -->
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary w-100">로그인</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<script>
+    const togglePassword = document.querySelector('#togglePassword');
+    const password = document.querySelector('#id_password');
+
+    togglePassword.addEventListener('click', function (e) {
+        // toggle the type attribute
+        const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
+        password.setAttribute('type', type);
+
+        // toggle the eye slash icon
+        this.classList.toggle('bi-eye');
+    });
+</script>
 {% endblock %}
