--- a/accounts/templates/accounts/logout.html
+++ b/accounts/templates/accounts/logout.html
@@ -1,8 +1,4 @@
-{% extends "base/base.html" %}
-
-{% block title %}Logged out{% endblock %}
-
-{% block content %}
-<h2>You have been logged out.</h2>
-<a href="{% url 'login' %}">Log in again</a>
-{% endblock %}
+<form method="post" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Logout</button>
+</form>
