--- a/base/templates/base/header.html
+++ b/base/templates/base/header.html
@@ -12,7 +12,10 @@
                     </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="btn btn-outline-danger me-2" href="{% url 'logout' %}">Logout</a>
+                            <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: inline;">
+                                {% csrf_token %}
+                                <button type="submit" class="btn btn-outline-danger me-2">Logout</button>
+                            </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
