--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,9 +3,9 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-8" style="max-width: 800px; width: 100%; margin: 0 auto;">
     <div class="row justify-content-center">
-        <div class="col-md-20 col-lg-20 col-xl-20"> <!-- 컬럼 너비를 조정 -->
+        <div class="col-md-40 col-lg-40 col-xl-40"> <!-- 컬럼 너비를 조정 -->
             <div class="card">
                 <div class="card-header text-center">
                     <h3>로그인</h3>
