이전 기능에 스크롤기능 추가

--- a/accounts/templates/accounts/add_stock.html
+++ b/accounts/templates/accounts/add_stock.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="card-body">
                     <input type="text" id="stock-search" class="form-control mb-3" onkeyup="filterStocks()" placeholder="Search for stocks..">
-                    <ul class="list-group" id="stock-list">
+                    <ul class="list-group" id="stock-list" style="max-height: 400px; overflow-y: auto; width: 100%;">
                         {% for stock in all_stocks %}
                             <li class="list-group-item" onclick="fillStockName('{{ stock.name }}')">
                                 {{ stock.name }}
