--- a/recommendation/templates/recommendation/recommendation_list.html
+++ b/recommendation/templates/recommendation/recommendation_list.html
@@ -7,7 +7,7 @@
 
 <!-- 설명 추가 -->
 <p class="description text-center mb-4">
-    해당 추천 종목은 모델이 코스피 종목들에 대해 하루 뒤 5% 이상 오를 것이라고 예측한 종목입니다.
+    해당 추천 종목은 모델이 코스피 종목들에 대해 하루 뒤 5% 이상 오를 것이라고 예측한 종목입니다. 해당 종목을 클릭하면 종목 뉴스와 공시를 확인할 수 있습니다.
 </p>
 
 <!-- 추천 종목을 버튼 형태로 2개씩 한 줄에 표시 -->
