예측값 출력할 때 색상 변경

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -13,7 +13,7 @@
 <body>
     {% include 'base/header.html' %}
 
-    <div class="content" style="flex: 1; padding-top: 60px; max-width: 1200px; margin: 0 auto; min-height: 800px;">
+    <div class="content" style="flex: 1; padding-top: 60px; max-width: 2000px !important; margin: 0 auto; margin-bottom: 50px; min-height: 500px;">
         {% block content %}
         {% endblock %}
     </div>
