--- a/base/templates/base/footer.html
+++ b/base/templates/base/footer.html
@@ -1,9 +1,12 @@
+{% load static %}
 <footer class="footer">
-    <div class="container text-center">
-        <p>&copy; 2024 iM Digital banker academy. All rights reserved.</p>
-        <div>
+    <div class="container">
+        <p>&copy; 2024 iM Digital Banker Academy. All rights reserved.</p>
+        <div class="social-links">
             <a href="https://github.com/0jjuni/stock_predictor" target="_blank">GitHub</a> |
             <a href="https://www.linkedin.com/in/%EC%98%81%EC%A4%80-%ED%97%88-a247472a9/" target="_blank">LinkedIn</a>
         </div>
     </div>
 </footer>
+
+
