--- a/base/templates/base/header.html
+++ b/base/templates/base/header.html
@@ -1,35 +1,36 @@
-{% load static %}
+<link rel="stylesheet" href="../../../static/css/header.css">{% load static %}
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid">
-            <!-- 로고 추가 -->
+    <nav class="navbar fixed-top">
+        <div class="container">
+            <!-- 로고 -->
             <a class="navbar-brand" href="{% url 'home' %}">
-                <img src="{% static 'images/headerlogo.png' %}" alt="Logo" style="height: 50px;">
+                <img src="{% static 'images/headerlogo.png' %}" alt="Logo" class="logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+
+            <!-- 토글 버튼 (작은 화면에서 보임) -->
+            <button class="navbar-toggler" id="navbar-toggle">
+                ☰
             </button>
-            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+
+            <!-- 로그인 메뉴 -->
+            <div class="navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="btn btn-outline-primary me-2" href="{% url 'home' %}">Home</a>
-                    </li>
                     {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="btn btn-outline-primary me-2" href="{% url 'add_interest_stock' %}">Add Stock</a>
+                            <a class="nav-link" href="{% url 'add_interest_stock' %}">Add Stock</a>
                         </li>
                         <li class="nav-item">
-                            <a class="btn btn-outline-primary me-2" href="{% url 'view_interest_stocks' %}">View Stocks</a>
+                            <a class="nav-link" href="{% url 'view_interest_stocks' %}">View Stocks</a>
                         </li>
                         <li class="nav-item">
                             <form id="logout-form" method="post" action="{% url 'logout' %}" style="display: inline;">
                                 {% csrf_token %}
-                                <button type="submit" class="btn btn-outline-danger me-2">Logout</button>
+                                <button type="submit" class="nav-link logout-btn">Logout</button>
                             </form>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="btn btn-outline-primary me-2" href="{% url 'login' %}">Login</a>
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
                     {% endif %}
                 </ul>
@@ -37,6 +38,3 @@
         </div>
     </nav>
 </header>
-
-<!-- header.css 로드 -->
-<link rel="stylesheet" href="{% static 'css/header.css' %}">
