--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -1,30 +1,23 @@
 {% extends "base/base.html" %}
 
-{% load static %}  <!-- 이 부분이 추가되어야 합니다. -->
+{% load static %}
 
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="container text-center my-2">
+<!-- CSS 로드 -->
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+<div class="container text-center my-4">
     <h1 class="mb-5">
-        <img src="{% static 'images/logo.png' %}" alt="Logo" style="height: 170px; vertical-align: middle;">
+        <img src="{% static 'images/logo.png' %}" alt="Logo" class="logo-home">
     </h1>
-    <p class="lead mb-5">아래 버튼을 클릭하여 주식 가격 예측, 주식 추천, 또는 모델 성능을 확인해보세요.<br>해당 프로그램은 최신 데이터를 기반으로 주식 시장 분석을 돕고, 투자 결정을 지원합니다.<br>로그인을 하시면 관심종목을 추가하여 관리할 수 있습니다.</p>
+    <p class="lead mb-4">아래 버튼을 클릭하여 주식 가격 예측, 주식 추천, 또는 모델 성능을 확인해보세요.<br>해당 프로그램은 최신 데이터를 기반으로 주식 시장 분석을 돕고, 투자 결정을 지원합니다.<br>로그인을 하시면 관심종목을 추가하여 관리할 수 있습니다.</p>
 
     <!-- 버튼 컨테이너 -->
-    <div class="row justify-content-center">
-        <div class="col-md-4 mb-3">
-            <!-- 종목 예측 버튼 -->
-            <a href="{% url 'predict_stock' %}" class="btn btn-primary btn-lg btn-block">종목 예측</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <!-- 종목 추천 버튼 -->
-            <a href="{% url 'recommend_stocks' %}" class="btn btn-primary btn-lg btn-block">종목 추천</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <!-- 모델 정보 버튼 -->
-            <a href="{% url 'model_performance' %}" class="btn btn-primary btn-lg btn-block">모델 정보</a>
-        </div>
+    <div class="button-container">
+        <a href="{% url 'predict_stock' %}" class="btn btn-primary">종목 예측</a>
+        <a href="{% url 'recommend_stocks' %}" class="btn btn-success">종목 추천</a>
+        <a href="{% url 'model_performance' %}" class="btn btn-info">모델 정보</a>
     </div>
 </div>
 {% endblock %}
