--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,18 +1,17 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #f5f5f5;
     margin: 0;
     padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    display: block; /* Flexbox 제거 */
     min-height: 100vh;
+
 }
 
 h1 {
     color: #333;
     margin-bottom: 20px;
+    text-align: center; /* 가로 중앙 정렬 */
 }
 
 p {
@@ -22,36 +21,4 @@ p {
     text-align: center;
 }
 
-.button-container {
-    display: flex;
-    gap: 20px;
-}
-
-.predict-button, .recommend-button, .model-info-button {
-    background-color: #4CAF50;
-    color: white;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 18px;
-    text-decoration: none;
-    display: inline-block;
-}
-
-.predict-button:hover, .recommend-button:hover, .model-info-button:hover {
-    background-color: #45a049;
-}
-
-
-<!-- base/footer.html -->
-<footer class="bg-dark text-white text-center py-3">
-    <div class="container-fluid">
-        <p>&copy; 2024 iM Digital banker academy. All rights reserved.</p>
-        <p>
-            <a href="https://github.com/your-repo-link" class="text-white">GitHub</a> |
-            <a href="https://your-linkedin-profile" class="text-white">LinkedIn</a>
-        </p>
-    </div>
-</footer>
 
