헤더 디자인 수정

--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -19,6 +19,7 @@
             margin: 0 auto;
             background-color: #fff;
             min-height: 400px;
+            min-width: 80%; /* 최소 너비: 화면 너비의 80% */
         }
 
         /* 버튼 스타일 */
