--- a/static/css/header.css
+++ b/static/css/header.css
@@ -34,6 +34,7 @@ body {
 
 .logo {
     height: 50px; /* 로고 크기 조정 */
+    margin-right: 10px;
 }
 
 .navbar-collapse {
@@ -48,12 +49,19 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
-    gap: 15px; /* 메뉴 간 간격 설정 */
+    /*gap: 10px;   메뉴 간 간격 설정 */
     align-items: center;
 }
 
-.nav-item {
+.nav-item1 {
     display: inline-block;
+    margin-right: 3px; /* 오른쪽 여백 설정, 필요에 따라 조정 */
+}
+
+.nav-item2 {
+    display: inline-block;
+    margin-left: auto; /* 오른쪽 정렬 */
+    margin-right: 15px;
 }
 
 .nav-link {
