추천 관련 부트스트랩 제거

--- a/predictions/templates/predictions/predict.html
+++ b/predictions/templates/predictions/predict.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
+{% extends "base/base.html" %}
+
 {% load static %}
 
-<!DOCTYPE html>
+{% block content %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -189,3 +192,5 @@
     </script>
 </body>
 </html>
+
+{% endblock %}
