--- a/base/templates/base/base.html
+++ b/base/templates/base/base.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="{% static 'css/header.css' %}"> <!-- 헤더 스타일 추가 -->
     <link rel="stylesheet" href="{% static 'css/footer.css' %}"> <!-- 푸터 스타일을 별도의 CSS로 관리 -->
 
+    <!-- 추가적인 자식 템플릿에서의 CSS를 여기에 주입 -->
+    {% block extra_css %}{% endblock %}
+
     <style>
         /* 공통적인 레이아웃 스타일 */
         .content {
